Fix issue with header covering information

--- a/src/assets/styles/_grid.less
+++ b/src/assets/styles/_grid.less
@@ -45,6 +45,6 @@ section {
 
 @media (max-width: @small-mobile) {
   section {
-    padding: 150px 10px 30px;
+    padding: 220px 10px 30px;
   }
 }
